--- a/app/src/main/res/layout/fragment_criar_conta.xml
+++ b/app/src/main/res/layout/fragment_criar_conta.xml
@@ -142,6 +142,39 @@
         </EditText>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="20dp"
+            android:fontFamily="@font/poppinssemibold"
+            android:text="Insira uma foto"
+            android:layout_marginTop="20dp"
+            />
+
+        <ImageView
+            android:id="@+id/imgViewteste"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="-12dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/profile_template" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_foto"
+            style="@style/containerComponents"
+            android:layout_gravity="center"
+            android:text="Inserir"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/poppinsregular"
+            android:layout_width="250dp"
+            android:layout_height="65dp"
+            android:elevation="100dp"
+            />
+
+        <TextView
             android:id="@+id/tv_create2"
             android:layout_width="380dp"
             android:layout_height="26dp"
@@ -152,6 +185,8 @@
             android:text="Write a resume, up to 2000 words"
             android:layout_marginLeft="20dp"
             android:textSize="20dp" />
+
+
 
         <EditText
             android:id="@+id/et_curriculum"
