--- a/app/src/main/res/layout/fragment_home_menu.xml
+++ b/app/src/main/res/layout/fragment_home_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container2"
     android:textAlignment="gravity"
     tools:context=".HomeMenuFragment">
 
@@ -209,8 +210,8 @@
                                 android:layout_gravity="center_horizontal"
                                 android:layout_margin="12dp">
 
-                                <ImageView
-                                    android:id="@+id/imageViewMen"
+                                <ImageButton
+                                    android:id="@+id/btnChamados"
                                     android:layout_width="58dp"
                                     android:layout_height="60dp"
                                     android:background="@drawable/oval_profile"
@@ -229,7 +230,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
                                 android:fontFamily="@font/poppinssemibold"
-                                android:text="Mensagens"
+                                android:text="Chamados Aceitos"
                                 android:textAlignment="center"
                                 android:textColor="@color/black" />
                         </LinearLayout>
