--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -91,6 +91,9 @@
         <action
             android:id="@+id/action_homeMenuFragment_to_recyclerViewActivity"
             app:destination="@id/recyclerViewActivity" />
+        <action
+            android:id="@+id/action_homeMenuFragment_to_recyclerViewChamadosActivity"
+            app:destination="@id/recyclerViewChamadosActivity" />
     </fragment>
     <fragment
         android:id="@+id/accountDetailsFragment"
@@ -106,6 +109,11 @@
         android:name="br.com.puccampinas.uteeth3pi.recycleview.RecyclerViewActivity"
         android:label="activity_recycler_view"
         tools:layout="@layout/activity_recycler_view" />
+    <activity
+        android:id="@+id/recyclerViewChamadosActivity"
+        android:name="br.com.puccampinas.uteeth3pi.recycleview.RecyclerViewChamadosActivity"
+        android:label="activity_recycler_view_chamados"
+        tools:layout="@layout/activity_recycler_view_chamados" />
 
 
 </navigation>
