--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -82,11 +82,30 @@
             </TextView>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
 
-        <ImageView
-            android:id="@+id/tv_photo"
-            android:layout_width="350dp"
-            android:layout_height="350dp" />
+            <ImageView
+                android:id="@+id/tv_photo"
+                android:layout_width="100dp"
+                android:layout_height="150dp" />
+            <ImageView
+                android:id="@+id/tv_photo1"
+                android:layout_marginHorizontal="10dp"
+                android:layout_width="100dp"
+                android:layout_height="150dp" />
+            <ImageView
+                android:id="@+id/tv_photo2"
+                android:layout_marginHorizontal="10dp"
+                android:layout_width="100dp"
+                android:layout_height="150dp" />
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
