--- a/app/src/main/res/layout/fragment_home_menu.xml
+++ b/app/src/main/res/layout/fragment_home_menu.xml
@@ -279,6 +279,49 @@
                                 android:textColor="@color/black" />
                         </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp"
+                            android:layout_weight="0.3333"
+                            android:background="@drawable/gray_rectangle_profile"
+                            android:elevation="5dp"
+                            android:orientation="vertical">
+
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_margin="12dp">
+
+                                <ImageButton
+                                    android:id="@+id/btnAvaliacao"
+                                    android:layout_width="58dp"
+                                    android:layout_height="60dp"
+                                    android:background="@drawable/oval_profile"
+                                    android:scaleType="centerInside"
+
+                                    android:src="@drawable/avaliacao2"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+                            <TextView
+                                android:id="@+id/tv_avaliacao"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:fontFamily="@font/poppinssemibold"
+                                android:text="Avaliações do Usuário"
+                                android:textAlignment="center"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+
+
+
                     </LinearLayout>
 
                 </LinearLayout>
