--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -94,6 +94,9 @@
         <action
             android:id="@+id/action_homeMenuFragment_to_recyclerViewChamadosActivity"
             app:destination="@id/recyclerViewChamadosActivity" />
+        <action
+            android:id="@+id/action_homeMenuFragment_to_avaliacaoActivity"
+            app:destination="@id/avaliacaoActivity" />
     </fragment>
     <fragment
         android:id="@+id/accountDetailsFragment"
@@ -114,6 +117,11 @@
         android:name="br.com.puccampinas.uteeth3pi.recycleview.RecyclerViewChamadosActivity"
         android:label="activity_recycler_view_chamados"
         tools:layout="@layout/activity_recycler_view_chamados" />
+    <activity
+        android:id="@+id/avaliacaoActivity"
+        android:name="br.com.puccampinas.uteeth3pi.recycleview.AvaliacaoActivity"
+        android:label="activity_recycler_view_avaliacao"
+        tools:layout="@layout/activity_recycler_view_avaliacao" />
 
 
 </navigation>
