--- a/app/src/main/res/layout/fragment_login_conta.xml
+++ b/app/src/main/res/layout/fragment_login_conta.xml
@@ -36,7 +36,7 @@
         android:layout_marginLeft="30dp"
         android:textSize="20dp"
         android:fontFamily="@font/poppinssemibold"
-        android:text="Login to your Account" />
+        android:text="@string/login_to_your_account" />
 
 
     <EditText
@@ -47,7 +47,7 @@
         android:shadowColor="@color/black"
         android:elevation="5dp"
         android:inputType="textWebEmailAddress"
-        android:hint="E-mail">
+        android:hint="@string/tv_email">
 
     </EditText>
 
@@ -59,7 +59,7 @@
         android:shadowColor="@color/black"
         android:elevation="5dp"
 
-        android:hint="Password"
+        android:hint="@string/tv_password"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/black"
         android:inputType="textPassword"
@@ -71,7 +71,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_sign_in"
         style="@style/containerComponents"
-        android:text="Sign In"
+        android:text="@string/tv_sign_in"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginBottom="20dp"
@@ -83,7 +83,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-Or Sign with-"
+        android:text="@string/tv_or_sign_with"
         android:layout_gravity="center"
         android:fontFamily="@font/poppinslight"
 
@@ -95,23 +95,8 @@
         android:layout_height="71dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/btn_google"
-            style="@style/google_login"
-            android:layout_width="120dp"
-            android:layout_gravity="right"
-            android:elevation="10dp"
-            android:src="@drawable/google_logo1"></ImageView>
 
-        <ImageView
-            android:id="@+id/btn_facebook"
-            style="@style/google_login"
-            android:layout_width="120dp"
-            android:layout_gravity="right"
-            android:elevation="10dp"
-            android:src="@drawable/facebook_logo3">
 
-        </ImageView>
 
     </LinearLayout>
 
@@ -128,7 +113,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/poppinssemibold"
-            android:text="Don't have an account?"
+            android:text="@string/tv_don_t_have_an_account"
             android:textSize="20dp" />
 
         <TextView
