--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nome:"
+                android:text="@string/tv_name"
                 android:fontFamily="@font/poppinsmedium"
                 android:textColor="@color/black"
                 android:textSize="20sp">
@@ -39,7 +39,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pedro"
+                android:text=""
                 android:fontFamily="@font/poppinsregular"
                 android:id="@+id/tv_name"
                 android:textColor="@color/black"
@@ -60,7 +60,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Número:"
+                android:text="@string/tv_phone"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:fontFamily="@font/poppinsmedium"
@@ -72,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="19991753723"
+                android:text=""
                 android:fontFamily="@font/poppinsregular"
                 android:id="@+id/tv_phone"
                 android:textColor="@color/black"
@@ -94,11 +94,6 @@
                 android:layout_height="150dp" />
             <ImageView
                 android:id="@+id/tv_photo1"
-                android:layout_marginHorizontal="10dp"
-                android:layout_width="100dp"
-                android:layout_height="150dp" />
-            <ImageView
-                android:id="@+id/tv_photo2"
                 android:layout_marginHorizontal="10dp"
                 android:layout_width="100dp"
                 android:layout_height="150dp" />
@@ -128,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/poppinsregular"
-                android:text="Aceitar"
+                android:text="@string/accept"
                 android:textColor="@color/blue_200"
                 android:textSize="20sp"
                 android:textStyle="bold"></TextView>
@@ -138,11 +133,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/red"
-                android:text="Recusar"
+                android:text="@string/decline"
                 android:textSize="20sp"
                 android:fontFamily="@font/poppinsregular"
                 android:textStyle="bold"></TextView>
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/tv_photo2"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_marginHorizontal="10dp" />
 
 
     </LinearLayout>
