--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -40,7 +40,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pedro"
+                android:text=""
                 android:fontFamily="@font/poppinsregular"
                 android:id="@+id/tv_name"
                 android:textColor="@color/black"
@@ -73,7 +73,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="19991753723"
+                android:text=""
                 android:fontFamily="@font/poppinsregular"
                 android:id="@+id/tv_phone"
                 android:textColor="@color/black"
