--- a/app/src/main/res/layout/fragment_login_conta.xml
+++ b/app/src/main/res/layout/fragment_login_conta.xml
@@ -110,7 +110,8 @@
             android:id="@+id/tv_cadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/poppinssemibold"
             android:text="@string/tv_don_t_have_an_account"
@@ -123,7 +124,7 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/poppinssemibold"
             android:textColor="#040957"
-            android:text="  Cadastre-se"
+            android:text="Cadastre-se"
             android:textSize="20dp">
 
         </TextView>
