--- a/app/src/main/res/layout/item3.xml
+++ b/app/src/main/res/layout/item3.xml
@@ -72,7 +72,7 @@
 
 
             <TextView
-                android:id="@+id/tv_avaliacao"
+                android:id="@+id/tv_comentario"
                 android:layout_width="wrap_content"
                 android:layout_height="280dp"
                 android:layout_marginLeft="20dp"
